# rlsa

./: README.md
game/: CMakeLists.txt  build-noconsole.bat  build-static.bat  build-win32.sh  build.bat  main.cpp
game/include/: Character.h  GUIButton.h  GUIInput.h  GUIItem.h  GUIWindow.h  GUIWindowMainMenu.h  Game.h  Lib.h  Tools.h
game/include/services/: alert.h
game/manual-bin/: arial12.xml
game/manual-bin/imgs/: items source 1.pyxel  items source 2.pyxel  items source 3.pyxel  items source 4.pyxel  items source 5.pyxel  items source 6.pyxel  items.pyxel  map items.pyxel  map_textures.pyxel  nakedman.pyxel  skills.pyxel  skills_new.pyxel  warning.xml
game/manual-bin/imgs/effects/: arrow.xml  effects.pyxel  fireball.xml  flare.xml  iceball.xml  portal.pyxel  portal.xml
game/manual-bin/imgs/effects/statuses/: buffed.xml  burning.xml  lighted.xml  lightwalk.xml  revealed.xml  shield.xml  shining.xml  slowed.xml  stealth.xml  taunted.xml  television.xml
game/manual-bin/imgs/items/: agrohelmet.xml  bigdiamond.xml  bigemerald.xml  bigruby.xml  bigsapphire.xml  bigshield.xml  blackwood.xml  blinkshoes.xml  bow.xml  brightshirt.xml  copper.xml  cottonfabric.xml  dagger.xml  fireboots.xml  firemail.xml  firewand.xml  flag.xml  flare.xml  frostmail.xml  frostwand.xml  gold.xml  greatsword.xml  heavyboots.xml  hide.xml  hunterknife.xml  iceboots.xml  invhelmet.xml  iron.xml  ironwood.xml  leather.xml  lightmail.xml  magnetcape.xml  mediumdiamond.xml  mediumemerald.xml  mediumruby.xml  mediumsapphire.xml  monkshoes.xml  plate.xml  portalhat.xml  priestrobe.xml  (+17 more)
game/manual-bin/imgs/map/: grass.xml  tree.xml
game/manual-bin/imgs/monsters/: Grey mage.pyxel  Ogre.pyxel  hatchet.pyxel  ooze.pyxel  ork.pyxel  rabbit.pyxel  troll.pyxel
game/manual-bin/imgs/monsters/grunt/: attack1.xml  attack2.xml  attack3.xml  attack4.xml  attack5.xml  attack6.xml  attack7.xml  attack8.xml  dead.xml  dead1.xml  dead2.xml  dead3.xml  dead4.xml  dead5.xml  dead6.xml  dead7.xml  dead8.xml  move1.xml  move2.xml  move3.xml  (+5 more)
game/manual-bin/imgs/nakedman/: attack3.xml  attack5.xml  attack7.xml  attack8.xml  dead3.xml  dead4.xml  dead7.xml  dead8.xml  idle3.xml  idle6.xml  idle7.xml  idle8.xml  move2.xml  move3.xml  move4.xml  move7.xml
game/manual-bin/imgs/skills/: agrohelmet_check.xml  attack.xml  bigshield_protect.xml  blinkshoes_blink.xml  bow_shoot.xml  brightshirt_taunt.xml  dagger_attack.xml  fireboots_burn.xml  firemail_nova.xml  firewand_fireball.xml  flag_taunt.xml  flare_lightup.xml  frostmail_freeze.xml  frostwand_freeze.xml  greatsword_swing.xml  heavyboots_root.xml  hunterknife_scrap.xml  iceboots_slide.xml  invhelmet_check.xml  lightmail_lightup.xml  magnetcape_gather.xml  monkshoes_lightwalk.xml  plate_bubble.xml  portalhat_check.xml  priestrobe_buff.xml  prieststaff_heal.xml  shield_bash.xml  spear_thrust.xml  stealthcape_hide.xml  telehat_vision.xml
game/manual-bin/levels/: test.xml
game/manual-bin/meshes/: 1x2_empty.b3d  3x3 empty.b3d  3x3_empty.b3d
game/src/: Character.cpp  GUIButton.cpp  GUIInput.cpp  GUIItem.cpp  GUIWindow.cpp  GUIWindowMainMenu.cpp  Game.cpp  Tools.cpp
(+84 files in other folders)
